@@ -24,6 +24,7 @@ RELEASE 1.3.1
 - Fix bug where messages count was not updated after delete when imap_cache is set (#5872)
 - Fix potential XSS vulnerability with malformed HTML message markup
 - Bring back double-click behavior on the message list which was removed in 1.3.0 (#5823)
+- Enigma: Fix decrypting an encrypted+signed message when signature verification fails (#5914)
 
 RELEASE 1.3.0
 -------------
